syntax = "proto3";

package NAlice.NIoT.NVulpix;

option go_package = "a.yandex-team.ru/alice/iot/vulpix/protos";

message StartV2ContinueArguments {
    uint32 TimeoutMs = 1;
    string DeviceType = 2;
    string SSID = 3;
    string Password = 4;
    string RoomName = 5;
}

message TContinueArguments {
    oneof Value {
        StartV2ContinueArguments StartV2ContinueArguments = 1;
    }
};
